--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -8,6 +8,9 @@ mark_as_advanced(
   FETCHCONTENT_UPDATES_DISCONNECTED
 )
 
+add_subdirectory(result)
+add_subdirectory(fmt)
+
 if(USE_BTREE)
   add_subdirectory(btree)
 endif()
