--- a/scripts/typeart-tmpl.sh.in
+++ b/scripts/typeart-tmpl.sh.in
@@ -200,17 +200,17 @@ function make_no_optim() {
   # Order: heap and stack/global together, no optimization pass
   if [ $skip_typeart == 0 ]; then
     $compiler ${omp_flags} ${typeart_includes} ${typeart_san_flags} \
-      -O1 ${compile_flags} -Xclang -disable-llvm-passes -S -emit-llvm "${source_file}" -o - |
+      -O0 ${compile_flags} -Xclang -disable-llvm-passes -S -emit-llvm "${source_file}" -o - |
       $opt_tool ${typeart_plugin} ${typeart_combined_mode_args} ${ta_more_args} |
       $llc_tool -x=ir ${llc_flags} -o "${object_file}"
   else
     # First create types.yaml:
     $compiler ${omp_flags} ${typeart_includes} ${typeart_san_flags} \
-      -O1 ${compile_flags} -Xclang -disable-llvm-passes -S -emit-llvm "${source_file}" -o - |
+      -O0 ${compile_flags} -Xclang -disable-llvm-passes -S -emit-llvm "${source_file}" -o - |
       $opt_tool ${typeart_plugin} ${typeart_combined_mode_args} ${ta_more_args} >/dev/null
 
     $compiler ${omp_flags} ${typeart_includes} ${typeart_san_flags} \
-      -O1 ${compile_flags} -Xclang -disable-llvm-passes -S -emit-llvm "${source_file}" -o - |
+      -O0 ${compile_flags} -Xclang -disable-llvm-passes -S -emit-llvm "${source_file}" -o - |
       $llc_tool -x=ir ${llc_flags} -o "${object_file}"
   fi
 }
@@ -219,7 +219,7 @@ function make_with_optim() {
   # Order: heap, optimize, alloca with additional args.
   if [ $skip_typeart == 0 ]; then
     $compiler ${omp_flags} ${typeart_includes} ${typeart_san_flags} \
-      -O1 ${compile_flags} -Xclang -disable-llvm-passes -S -emit-llvm "${source_file}" -o - |
+      -O0 ${compile_flags} -Xclang -disable-llvm-passes -S -emit-llvm "${source_file}" -o - |
       $opt_tool ${typeart_plugin} ${typeart_heap_mode_args} ${ta_more_args} |
       $opt_tool ${optimize} -S |
       $opt_tool ${typeart_plugin} ${typeart_stack_mode_args} ${ta_more_args} |
@@ -227,13 +227,13 @@ function make_with_optim() {
   else
     # First create types.yaml:
     $compiler ${omp_flags} ${typeart_includes} ${typeart_san_flags} \
-      -O1 ${compile_flags} -Xclang -disable-llvm-passes -S -emit-llvm "${source_file}" -o - |
+      -O0 ${compile_flags} -Xclang -disable-llvm-passes -S -emit-llvm "${source_file}" -o - |
       $opt_tool ${typeart_plugin} ${typeart_heap_mode_args} ${ta_more_args} |
       $opt_tool ${optimize} -S |
       $opt_tool ${typeart_plugin} ${typeart_stack_mode_args} ${ta_more_args} >/dev/null
 
     $compiler ${omp_flags} ${typeart_includes} ${typeart_san_flags} \
-      -O1 ${compile_flags} -Xclang -disable-llvm-passes -S -emit-llvm "${source_file}" -o - |
+      -O0 ${compile_flags} -Xclang -disable-llvm-passes -S -emit-llvm "${source_file}" -o - |
       $opt_tool ${optimize} |
       $llc_tool -x=ir ${llc_flags} -o "${object_file}"
   fi
@@ -249,7 +249,7 @@ function compile() {
 }
 
 function main_link() {
-  $compiler ${omp_flags} ${threads_flags} ${typeart_san_flags} ${typeart_ldflags} "${object_file}" -o "${exe_file}"
+  $compiler -rdynamic ${omp_flags} ${threads_flags} ${typeart_san_flags} ${typeart_ldflags} "${object_file}" -o "${exe_file}"
 }
 
 function execute() {
